added images folder

--- a/index.html
+++ b/index.html
@@ -14,10 +14,21 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:wght@500;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-
+    <script
+      src="https://kit.fontawesome.com/364e80cb30.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style/portfolio.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Flowers</title>
   </head>
-  <body></body>
+  <body>
+    <div class="hero">
+      <p>Hello, I am</p>
+      <h1>Lwandisa Masiza</h1>
+      <h2>A front-end developer based in South Africa.</h2>
+      <div><a href="#" class="btn btn-branding">Contact me</a></div>
+    </div>
+    <p><i class="fa-brands fa-instagram"></i></p>
+  </body>
 </html>
