added a cover page image

--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
       <h2>A front-end developer based in South Africa.</h2>
       <div><a href="#" class="btn btn-branding">Contact me</a></div>
     </div>
+    <img src="images/cover.png" class="img-fluid" alt="" />
     <p><i class="fa-brands fa-instagram"></i></p>
+    <p class="tex-center m-5">
+      Featured are some of flowers that are only found in the beauty of South
+      Africa.
+    </p>
+    <div class="container">
+      <div class="row">
+        <div class="col-6"></div>
+      </div>
+    </div>
   </body>
 </html>
