Added more html and css on my project

--- a/index.html
+++ b/index.html
@@ -36,8 +36,48 @@
       Africa.
     </p>
     <div class="container">
-      <div class="row">
-        <div class="col-6"></div>
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <div class="project-desciption">
+            <h2 class="mb-5">Protea Flower</h2>
+            <p class="mb-5 text-muted">
+              Protea is a genus of South Africa flowering plants, also called
+              sugarbushes. It is the type genus of the Proteaceae family. About
+              92% of the species occur only in the Cape Floristic Region, a
+              narrow belt of mountainous coastal land from Clanwiliam to
+              Grahamstown, South Africa.
+            </p>
+            <div><a href="#" class="btn btn-learn">Learn More</a></div>
+          </div>
+          <div class="col d-none d-lg-block">
+            <img src="images/protea.png" class="img-fluid" alt="" />
+          </div>
+          <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <div class="project-desciption">
+            <h2 class="mb-5">Strelitzia Reginae</h2>
+            <p class="mb-5 text-muted">
+  Strelitzia Reginae is the most popular variety of Strelitzia found in South Africa. It grows to a height of about 1.5m and is a sturdy, low maintenance pant.
+            </p>
+            <div><a href="#" class="btn btn-learn">More Info</a></div>
+          </div>
+          <div class="col d-none d-lg-block">
+            <img src="images/Strelitzia_reginae.png" class="img-fluid" alt="" />
+          </div>
+       <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <div class="project-desciption">
+            <h2 class="mb-5">Disa Uniflora</h2>
+            <p class="mb-5 text-muted">
+              This evergreen, terrestrial (ground) orchid grows under perennially wet or moist conditions. it is found along stream banks, waterfalls or wet cliffs on Table Mountain and other mountain localities of the Western Cape.
+            </p>
+            <div><a href="#" class="btn btn-learn">Learn More</a></div>
+          </div>
+          <div class="col d-none d-lg-block">
+            <img src="images/disa-uniflora.png" class="img-fluid" alt="" />
+          </div>
+      
+        </div>
       </div>
     </div>
   </body>
