updated more html and css on the project to improve it

--- a/index.html
+++ b/index.html
@@ -26,38 +26,69 @@
     <div class="hero">
       <p>Hello, I am</p>
       <h1>Lwandisa Masiza</h1>
-      <h2>A front-end developer based in South Africa.</h2>
+      <h2 class="mb-5">A front-end developer based in South Africa.</h2>
       <div><a href="#" class="btn btn-branding">Contact me</a></div>
     </div>
     <img src="images/cover.png" class="img-fluid" alt="" />
     <p><i class="fa-brands fa-instagram"></i></p>
     <p class="tex-center m-5">
       Featured are some of flowers that are only found in the beauty of South
-      Africa.</p>
+      Africa.
+    </p>
     <div class="container">
-    <div class="row mb-5">
-      <div class="col">
-        <h2 class="mb-5">Protea Flower</h2>
-        <img src="images/protea.png" class="img-fluid" alt=""> 
-    <p class="mb-5">Protea is a genus of South Africa flowering plants,also called sugarbushes. It is the type genus of the Proteaceae family. About 92% of the species occur only in the Cape Floristic Region, a narrow belt of mountainous coastal land from Clanwilliam to Grahamtown, South Africa.</p>
-  <a href="#" class="btn btn-branding-outline">Learn More</a>  
-      <div></div>
       <div class="row mb-5">
-      <div class="col">
-        <h2 class="mb-5">Disa-Uniflora</h2>
-        <img src="images/disa-uniflora.png" class="img-fluid" alt=""> 
-    <p class="mb-5">Disa uniflora, the red disa or pride of Table Mountain, is a South African species of orchid in the family orchidaceae. It is the type species of the genus Disa, and one of its best-known members. It is occasionally referred to by its old name Disa grandiflora.</p>
-  <a href="#" class="btn btn-branding-outline">Learn More</a>  
-      <div></div>
-<div class="row mb-5">
-      <div class="col">
-        <h2 class="mb-5">Strelitzia-Regina</h2>
-        <img src="images/Strelitzia_reginae.png" class="img-fluid" alt=""> 
-    <p class="mb-5">Strelitzia is a genus of five species of perennial plants, native to South Africa. It belongs to the plant family Strelitziaceae. A common name of the genus is bird of paradise flower/plant, because of a resemblance of its flowers to birds of paradise.</p>
-  <a href="#" class="btn btn-branding-outline">Learn More</a>  
-      <div></div>
-
+        <div class="col d-none d-lg-block">
+          <img src="images/protea.png" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Protea Flower</h2>
+            <p class="mb-5 text-muted">
+              Protea is a genus of South Africa flowering plants,also called
+              sugarbushes. It is the type genus of the Proteaceae family. About
+              92% of the species occur only in the Cape Floristic Region, a
+              narrow belt of mountainous coastal land from Clanwilliam to
+              Grahamtown, South Africa.
+            </p>
+            <a href="" class="btn btn-branding-outline">Learn More</a>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Disa-Uniflora</h2>
+            <p class="mb-5 text-muted">
+              Disa Disa-Uniflora, the red disa or pride of Table Mountain, is a
+              South African species of orchid in the family Orchidaceae. It is
+              the type species of the genus Disa, and one of its best-known
+              members. It is occasionally referred to by its old name Disa
+              grandiflora.
+            </p>
+            <div class="col d-none d-lg-block">
+              <img src="images/disa-uniflora.png" alt="" />
+            </div>
+            <a href="" class="btn btn-branding-outline">Learn More</a>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Strelitzia-Reginae</h2>
+            <p class="mb-5 text-muted">
+              Strelitzia-Reginae, commonly known as the crane flower or bird of
+              paradise,is a tropical perennial native toSouth Africa. It is
+              widely celebrated for its vibrate, boat-shaped flowers that
+              resemble an exotic bird in flight.
+            </p>
+            <div class="col d-none d-lg-block">
+              <img src="images/Strelitzia_reginae.png" alt="" />
+            </div>
+            <a href="" class="btn btn-branding-outline">Learn More</a>
+          </div>
+        </div>
+      </div>
     </div>
-    
   </body>
 </html>
