Edited the html to make it look clean
Added and removed some html to make the project look neat and clean.

--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
       <p>Hello, I am</p>
       <h1>Lwandisa Masiza</h1>
       <h2 class="mb-5">A front-end developer based in South Africa.</h2>
-      <div><a href="#" class="btn btn-branding">Contact me</a></div>
+      <div>
+        <a href="#" class="btn btn-branding">Contact me</a></div>
     </div>
+  </div>
     <img src="images/cover.png" class="img-fluid" alt="" />
     <p><i class="fa-brands fa-instagram"></i></p>
     <p class="tex-center m-5">
@@ -50,45 +52,38 @@
               narrow belt of mountainous coastal land from Clanwilliam to
               Grahamtown, South Africa.
             </p>
-            <a href="" class="btn btn-branding-outline">Learn More</a>
-          </div>
-        </div>
-      </div>
-      <div class="row mb-5">
-        <div class="col">
-          <div class="project-description">
-            <h2 class="mb-5">Disa-Uniflora</h2>
-            <p class="mb-5 text-muted">
-              Disa Disa-Uniflora, the red disa or pride of Table Mountain, is a
-              South African species of orchid in the family Orchidaceae. It is
-              the type species of the genus Disa, and one of its best-known
-              members. It is occasionally referred to by its old name Disa
-              grandiflora.
-            </p>
-            <div class="col d-none d-lg-block">
-              <img src="images/disa-uniflora.png" alt="" />
+              <a href="#" class="btn btn-branding-outline">Learn More</a>
             </div>
-            <a href="" class="btn btn-branding-outline">Learn More</a>
           </div>
+
+        <div class="row">
+<div class="col d-none d-lg-block">
+<img src="images/disa.png" class="img-fluid" alt=""/>
+</div>
+<div class="col">
+<div class="project-description">
+  <h2 class="mb-5">Disa Uniflora</h2>
+  <p class="mb-5 text-muted">
+Disa uniflora, the red disa or pride of Table Mountain, is a South African species of orchid in the family Orchidaceae. It is the type species of the genus Disa, and one of its best-known members. It is occasionally referred to by its old name Disa grandiflora.
+  </p>
+  <a href="" class="btn btn-branding-outline">Learn More</a>
+</div>
         </div>
-      </div>
-      <div class="row mb-5">
-        <div class="col">
-          <div class="project-description">
-            <h2 class="mb-5">Strelitzia-Reginae</h2>
-            <p class="mb-5 text-muted">
-              Strelitzia-Reginae, commonly known as the crane flower or bird of
-              paradise,is a tropical perennial native toSouth Africa. It is
-              widely celebrated for its vibrate, boat-shaped flowers that
-              resemble an exotic bird in flight.
-            </p>
-            <div class="col d-none d-lg-block">
-              <img src="images/Strelitzia_reginae.png" alt="" />
-            </div>
-            <a href="" class="btn btn-branding-outline">Learn More</a>
-          </div>
-        </div>
-      </div>
+         
+     <div class="row">
+<div class="col d-none d-lg-block">
+<img src="images/reginae.png" class="img-fluid" alt=""/>
+</div>
+<div class="col">
+<div class="project-description">
+<h2 class="mb-5">Strelitzia Reginae Flower</h2>
+<p class="mb-5 text-muted">
+  Strelitzia, also known as bird of paradise or crane flower, are a genus of five pernnial plants native to the eastern part of South Africa, with Strelitzia Reginae being the most famous. These hardy plants are characterized by their fan-shaped foliage and iconic, striking orange and blue/purple flowers that attract sunbirds for pollination.
+</p>
+<a href="" class="btn btn-branding-outline"> Learn More</a>
+</div>
+</div>
+     </div>   
     </div>
   </body>
 </html>
