added a new file called contact.html for the project and used font awesome

--- a/images/contact.html
+++ b/images/contact.html
@@ -20,28 +20,23 @@
     ></script>
     <link rel="stylesheet" href="style/portfolio.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About me</title>
+    <title>Contact Me</title>
   </head>
   <body>
-    <h1> Hi I am Lwandisa Masiza</h1>
-    <h2> Front-End Developer</h2>
     <div class="content-container container">
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="content">
-    <h1 class="mb-4">
-      
-    </h1>
-    
-    <p>For anyone  who like to see more of my projects please feel free to contact me.</p>
-    <a href="">View my projects</a>
+      <div class="content">
+        <h1 class="mb-4">Let's get in touch!</h1>
+            <h3>Email</h3>
+            <p><i class="fa-solid fa-message"></i>
+                masiza.lwandisa@gmail.com
+            </p>
+            <h3>Instagram</h3>
+            <p><i class="fa-brands fa-instagram"></i>
+                @lwandym
+            </p>
           </div>
-        </div>
-        <div class="col-lg-6">
-          <img src="images/lwandisa.png"alt=""class="audi"/>
         </div>
       </div>
     </div>
   </body>
 </html>
-
