--- a/work.html
+++ b/work.html
@@ -23,12 +23,17 @@
     <title>my work</title>
   </head>
   <body>
-<div class="content-container container">
-    <div class="content">
-        <h1 class="mb-4">
-            
-        </h1>
+    <div class="content-container container">
+      <div class="content">
+        <h1 class="mb-4">These are some of the projects I have worked on</h1>
+        <div class="row">
+          <div>
+            <img src="images/coffee.png" class="img-fluid" alt="" />
+            <h3>Ice Coffee Project</h3>
+            <p>Built with htlm, css and java script.</p>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
   </body>
 </html>
